--- a/index.html
+++ b/index.html
@@ -12,32 +12,40 @@
     <section class="display" aria-live="polite" id="display">0</section>
 
     <div class="buttons" role="group" aria-label="Calculator keypad">
-      <button class="btn function" aria-label="Clear" data-action="clear">AC</button>
-      <button class="btn function" aria-label="Plus minus" data-action="sign">±</button>
-      <button class="btn function" aria-label="Percent" data-action="percent">%</button>
-      <button class="btn operator" aria-label="Divide" data-action="/">÷</button>
+  <button class="btn function" aria-label="Clear" data-action="clear">AC</button>
+  <button class="btn function" aria-label="Plus minus" data-action="sign">±</button>
+  <button class="btn function" aria-label="Percent" data-action="percent">%</button>
+  <button class="btn operator" aria-label="Divide" data-action="/">÷</button>
 
-      <button class="btn number" aria-label="7" data-number="7">7</button>
-      <button class="btn number" aria-label="8" data-number="8">8</button>
-      <button class="btn number" aria-label="9" data-number="9">9</button>
-      <button class="btn operator" aria-label="Multiply" data-action="*">×</button>
+  <button class="btn number" aria-label="7" data-number="7">7</button>
+  <button class="btn number" aria-label="8" data-number="8">8</button>
+  <button class="btn number" aria-label="9" data-number="9">9</button>
+  <button class="btn operator" aria-label="Multiply" data-action="*">×</button>
 
-      <button class="btn number" aria-label="4" data-number="4">4</button>
-      <button class="btn number" aria-label="5" data-number="5">5</button>
-      <button class="btn number" aria-label="6" data-number="6">6</button>
-      <button class="btn operator" aria-label="Minus" data-action="-">−</button>
+  <button class="btn number" aria-label="4" data-number="4">4</button>
+  <button class="btn number" aria-label="5" data-number="5">5</button>
+  <button class="btn number" aria-label="6" data-number="6">6</button>
+  <button class="btn operator" aria-label="Minus" data-action="-">−</button>
 
-      <button class="btn number" aria-label="1" data-number="1">1</button>
-      <button class="btn number" aria-label="2" data-number="2">2</button>
-      <button class="btn number" aria-label="3" data-number="3">3</button>
-      <button class="btn operator" aria-label="Plus" data-action="+">+</button>
+  <button class="btn number" aria-label="1" data-number="1">1</button>
+  <button class="btn number" aria-label="2" data-number="2">2</button>
+  <button class="btn number" aria-label="3" data-number="3">3</button>
+  <button class="btn operator" aria-label="Plus" data-action="+">+</button>
 
-      <button class="btn number zero" aria-label="0" data-number="0">0</button>
-      <button class="btn number" aria-label="Decimal" data-number=".">.</button>
-      <button class="btn equal" aria-label="Equals" data-action="=">=</button>
-    </div>
+  <!-- NEW: Variable and Equals Sign Buttons -->
+  <button class="btn variable" onclick="handleInput('x')" aria-label="Variable x">x</button>
+  <button class="btn equalsign" onclick="handleInput('=')" aria-label="Equals sign as input">=</button>
+
+  <button class="btn number zero" aria-label="0" data-number="0">0</button>
+  <button class="btn number" aria-label="Decimal" data-number=".">.</button>
+  <button class="btn equal" aria-label="Equals" data-action="=">=</button>
+
+  <!-- Solve Button -->
+  <button class="btn function" onclick="solveForX()">Solve for x</button>
+</div>
   </main>
 
   <script src="script.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/algebra.js/0.2.6/algebra.min.js"></script>
 </body>
 </html>
