--- a/index.html
+++ b/index.html
@@ -3,49 +3,168 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="iPhone-style accessible calculator app built with HTML, CSS, and JavaScript." />
-  <title>iPhone Calculator</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta name="description" content="Accessible and functional calculator app using HTML, CSS, and JavaScript." />
+  <title>Accessible Calculator</title>
+  <style>
+    :root {
+      --btn-bg: #e0e0e0;
+      --btn-op: #f5913e;
+      --btn-text: #000;
+      --font-main: 'Arial', sans-serif;
+    }
+
+    body {
+      margin: 0;
+      font-family: var(--font-main);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: #f5f5f5;
+    }
+
+    .calculator {
+      display: grid;
+      grid-template-rows: auto 1fr;
+      width: 320px;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+      overflow: hidden;
+    }
+
+    .display {
+      background-color: #222;
+      color: white;
+      font-size: 2.5rem;
+      text-align: right;
+      padding: 1rem;
+      min-height: 60px;
+    }
+
+    .buttons {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 1px;
+      background-color: #ccc;
+    }
+
+    button {
+      font-size: 1.5rem;
+      padding: 1rem;
+      border: none;
+      background-color: var(--btn-bg);
+      color: var(--btn-text);
+      cursor: pointer;
+    }
+
+    button.operator {
+      background-color: var(--btn-op);
+      color: white;
+    }
+
+    button:focus {
+      outline: 3px solid #000;
+    }
+
+    .zero {
+      grid-column: span 2;
+    }
+  </style>
 </head>
 <body>
-  <main class="calculator" role="application" aria-label="iPhone-style calculator">
+  <main class="calculator" role="application" aria-label="Accessible calculator">
     <section class="display" aria-live="polite" id="display">0</section>
+    <div class="buttons">
+      <button onclick="clearDisplay()" aria-label="Clear">AC</button>
+      <button onclick="toggleSign()" aria-label="Toggle sign">±</button>
+      <button onclick="percent()" aria-label="Percent">%</button>
+      <button onclick="handleOperator('/')" class="operator" aria-label="Divide">÷</button>
 
-    <div class="buttons" role="group" aria-label="Calculator keypad">
-  <button class="btn function" aria-label="Clear" data-action="clear">AC</button>
-  <button class="btn function" aria-label="Plus minus" data-action="sign">±</button>
-  <button class="btn function" aria-label="Percent" data-action="percent">%</button>
-  <button class="btn operator" aria-label="Divide" data-action="/">÷</button>
+      <button onclick="appendNumber('7')">7</button>
+      <button onclick="appendNumber('8')">8</button>
+      <button onclick="appendNumber('9')">9</button>
+      <button onclick="handleOperator('*')" class="operator" aria-label="Multiply">×</button>
 
-  <button class="btn number" aria-label="7" data-number="7">7</button>
-  <button class="btn number" aria-label="8" data-number="8">8</button>
-  <button class="btn number" aria-label="9" data-number="9">9</button>
-  <button class="btn operator" aria-label="Multiply" data-action="*">×</button>
+      <button onclick="appendNumber('4')">4</button>
+      <button onclick="appendNumber('5')">5</button>
+      <button onclick="appendNumber('6')">6</button>
+      <button onclick="handleOperator('-')" class="operator" aria-label="Subtract">−</button>
 
-  <button class="btn number" aria-label="4" data-number="4">4</button>
-  <button class="btn number" aria-label="5" data-number="5">5</button>
-  <button class="btn number" aria-label="6" data-number="6">6</button>
-  <button class="btn operator" aria-label="Minus" data-action="-">−</button>
+      <button onclick="appendNumber('1')">1</button>
+      <button onclick="appendNumber('2')">2</button>
+      <button onclick="appendNumber('3')">3</button>
+      <button onclick="handleOperator('+')" class="operator" aria-label="Add">+</button>
 
-  <button class="btn number" aria-label="1" data-number="1">1</button>
-  <button class="btn number" aria-label="2" data-number="2">2</button>
-  <button class="btn number" aria-label="3" data-number="3">3</button>
-  <button class="btn operator" aria-label="Plus" data-action="+">+</button>
-
-  <!-- NEW: Variable and Equals Sign Buttons -->
-  <button class="btn variable" onclick="handleInput('x')" aria-label="Variable x">x</button>
-  <button class="btn equalsign" onclick="handleInput('=')" aria-label="Equals sign as input">=</button>
-
-  <button class="btn number zero" aria-label="0" data-number="0">0</button>
-  <button class="btn number" aria-label="Decimal" data-number=".">.</button>
-  <button class="btn equal" aria-label="Equals" data-action="=">=</button>
-
-  <!-- Solve Button -->
-  <button class="btn function" onclick="solveForX()">Solve for x</button>
-</div>
+      <button class="zero" onclick="appendNumber('0')">0</button>
+      <button onclick="appendNumber('.')">.</button>
+      <button onclick="calculate()" class="operator" aria-label="Equals">=</button>
+    </div>
   </main>
+  <script>
+    let current = '';
+    let operator = null;
+    let previous = '';
+    const display = document.getElementById('display');
 
-  <script src="script.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/algebra.js/0.2.6/algebra.min.js"></script>
-</body>
-</html>
+    function updateDisplay(value) {
+      display.textContent = value || '0';
+    }
+
+    function appendNumber(num) {
+      if (current === '0' && num !== '.') current = '';
+      current += num;
+      updateDisplay(current);
+    }
+
+    function handleOperator(op) {
+      if (current === '') return;
+      if (previous !== '') calculate();
+      operator = op;
+      previous = current;
+      current = '';
+    }
+
+    function calculate() {
+      if (previous === '' || current === '' || !operator) return;
+      const a = parseFloat(previous);
+      const b = parseFloat(current);
+      let result;
+
+      switch (operator) {
+        case '+': result = a + b; break;
+        case '-': result = a - b; break;
+        case '*': result = a * b; break;
+        case '/': result = b !== 0 ? a / b : 'Error'; break;
+        default: return;
+      }
+
+      current = result.toString();
+      operator = null;
+      previous = '';
+      updateDisplay(current);
+    }
+
+    function clearDisplay() {
+      current = '';
+      operator = null;
+      previous = '';
+      updateDisplay('0');
+    }
+
+    function toggleSign() {
+      if (current) {
+        current = (parseFloat(current) * -1).toString();
+        updateDisplay(current);
+      }
+    }
+
+    function percent() {
+      if (current) {
+        current = (parseFloat(current) / 100).toString();
+        updateDisplay(current);
+      }
+    }
+  </script>
+    </body>
+  </html>
